Fix bug to remove white space under footer on ipad

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -517,7 +517,7 @@ td {
 
 .response {
     text-align: center;
-    margin: 10% auto;
+    margin: 20% auto;
     padding: 30px 20px;
     background-color: #007C83;
     border: 10px double;
